# rigel

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  devenv.nix  devenv.yaml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  continuous-release.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
ci/scripts/: build-win.sh  measure-coverage.sh
coverage/: ANALYSIS.md
coverage/avx2/: summary.txt
crates/cli/: Cargo.toml
crates/dsp/: Cargo.toml
crates/xtask/: Cargo.toml
docs/: benchmarking.md  development-environments.md  simd-math-research.md  wavetable-format.md
docs/examples/: generate_saw_wtbl.py  third_party_python.py
projects/rigel-backend/: README.md
projects/rigel-site/: README.md
projects/rigel-synth/: README.md
projects/rigel-synth/crates/cli/: Cargo.toml
projects/rigel-synth/crates/cli/src/: main.rs
projects/rigel-synth/crates/cli/src/commands/: mod.rs  wavetable.rs
projects/rigel-synth/crates/cli/tests/: wavetable_cmd_tests.rs
projects/rigel-synth/crates/dsp/: Cargo.toml
projects/rigel-synth/crates/dsp/benches/: BUILD_PROFILE.md  PERFORMANCE_VALIDATION.md  criterion_benches.rs  iai_benches.rs
projects/rigel-synth/crates/dsp/src/: lib.rs
projects/rigel-synth/crates/dsp/tests/: debug_dispatch.rs  simd_integration.rs  timebase_tests.rs
projects/rigel-synth/crates/math/: Cargo.toml  DEVELOPMENT.md  README.md
projects/rigel-synth/crates/math/benches/: criterion_benches.rs  iai_benches.rs
projects/rigel-synth/crates/math/docs/: api-reference.md  benchmarking.md  coverage.md  testing.md
projects/rigel-synth/crates/math/src/: antialias.rs  block.rs  crossfade.rs  denormal.rs  exp2_lut.rs  interpolate.rs  lib.rs  noise.rs  polyblep.rs  saturate.rs  scalar.rs  scalar_fast.rs  sigmoid.rs  table.rs  traits.rs
projects/rigel-synth/crates/math/src/backends/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs
projects/rigel-synth/crates/math/src/math/: atan.rs  exp.rs  exp2_log2.rs  inverse.rs  log.rs  mod.rs  pow.rs  sqrt.rs  tanh.rs  trig.rs
projects/rigel-synth/crates/math/src/ops/: arithmetic.rs  compare.rs  fma.rs  horizontal.rs  minmax.rs  mod.rs
projects/rigel-synth/crates/math/src/simd/: atan.rs  avx2.rs  avx512.rs  backend.rs  context.rs  dispatcher.rs  exp.rs  exp2_log2.rs  helpers.rs  inverse.rs  log.rs  mod.rs  neon.rs  pow.rs  scalar.rs  sqrt.rs  tanh.rs  trig.rs
projects/rigel-synth/crates/math/tests/: accuracy.rs  backend_consistency.rs  backend_equivalence.rs  backend_selection.rs  block_processing.rs  denormal_tests.rs  edge_cases.rs  integration_dsp_workflows.rs  math_accuracy.rs  midi_research.rs  ops_consistency.rs  properties.proptest-regressions  properties.rs  regression_tests.rs  simd_context_api.rs  table_tests.rs  test_utils.rs
projects/rigel-synth/crates/modulation/: Cargo.toml
projects/rigel-synth/crates/modulation/benches/: envelope_bench.rs  lfo_bench.rs
projects/rigel-synth/crates/modulation/src/: lfo.rs  lib.rs  rate.rs  rng.rs  simd_rng.rs  traits.rs  waveshape.rs
projects/rigel-synth/crates/modulation/src/envelope/: batch.rs  config.rs  control_rate.rs  mod.rs  rates.rs  segment.rs  state.rs
projects/rigel-synth/crates/modulation/tests/: envelope_control_rate_tests.rs  envelope_tests.rs  envelope_timing_tests.rs  lfo_tests.rs
projects/rigel-synth/crates/plugin/: Cargo.toml
projects/rigel-synth/crates/plugin/src/: editor.rs  envelope_formatters.rs  lib.rs
projects/rigel-synth/crates/plugin/tests/: integration_tests.rs
projects/rigel-synth/crates/simd/: Cargo.toml  README.md
projects/rigel-synth/crates/simd-dispatch/: Cargo.toml
projects/rigel-synth/crates/simd-dispatch/src/: avx2.rs  avx512.rs  helpers.rs  lib.rs  neon.rs  scalar.rs
projects/rigel-synth/crates/simd-dispatch/tests/: backend_equivalence.rs  backend_selection.rs  simd_context_api.rs
projects/rigel-synth/crates/simd/src/: block.rs  denormal.rs  lib.rs  traits.rs
projects/rigel-synth/crates/simd/src/backends/: avx512.rs  scalar.rs
projects/rigel-synth/crates/simd/src/ops/: arithmetic.rs  compare.rs  fma.rs  horizontal.rs  minmax.rs  mod.rs
projects/rigel-synth/crates/timing/: Cargo.toml
projects/rigel-synth/crates/timing/src/: control_rate.rs  lib.rs  modulation.rs  smoother.rs  timebase.rs
projects/rigel-synth/crates/timing/tests/: control_rate_tests.rs  smoother_tests.rs  timebase_tests.rs
projects/rigel-synth/crates/wavetable-io/: Cargo.toml  build.rs
projects/rigel-synth/crates/wavetable-io/benches/: loading_bench.rs
projects/rigel-synth/crates/wavetable-io/fuzz/: Cargo.toml
projects/rigel-synth/crates/wavetable-io/fuzz/fuzz_targets/: fuzz_riff_parser.rs  fuzz_wavetable_reader.rs
projects/rigel-synth/crates/wavetable-io/src/: lib.rs  reader.rs  riff.rs  types.rs  validation.rs  writer.rs
projects/rigel-synth/crates/wavetable-io/tests/: reader_tests.rs  roundtrip_tests.rs  third_party_tests.rs
projects/rigel-synth/crates/xtask/: Cargo.toml
projects/wtgen/: AGENTS.md  README.md  devenv.nix  devenv.yaml  flake.nix  mypy.ini  pyproject.toml
specs/001-fast-dsp-math/: IMPLEMENTATION_STATUS.md  SESSION_SUMMARY.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-runtime-simd-dispatch/: IMPLEMENTATION_STATUS.md  benchmark-analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fast-dsp-math-polish/: IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  tasks.md
specs/002-forced-backend-validation/: spec.md
specs/004-lfo-modulation-source/: data-model.md  plan.md  research.md  spec.md
wtgen/: .gitignore  AGENTS.md  CLAUDE.md  README.md  devenv.nix  main.py  pyproject.toml
wtgen/src/wtgen/: cli.py  export.py  plotting.py  types.py  utils.py
wtgen/src/wtgen/cli/: commands.py  validators.py
wtgen/src/wtgen/dsp/: eq.py  fir.py  mipmap.py  process.py  waves.py
wtgen/tests/integration/: test_eq_integration.py
wtgen/tests/unit/: test_cli.py  test_eq.py  test_export.py  test_mipmap.py  test_process.py  test_waves.py
(+125 files in other folders)
