[workspace]
members = ["crates/dsp", "crates/cli", "crates/plugin", "crates/xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kyle Cierzan <kcierzan@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kcierzan/rigel"
homepage = "https://github.com/kcierz/rigel"
description = "Advanced wavetable synthesizer with separate DSP core"
rust-version = "1.70"

[workspace.dependencies]
# Math (no-std)
libm = "0.2"

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Audio file I/O
hound = "3.5"

# Error handling
anyhow = "1.0"

# Plugin framework
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
iced = { version = "0.9", features = ["canvas"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# Development profile with some optimization for audio work
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
