[workspace]
members = [
  "projects/rigel-synth/crates/dsp",
  "projects/rigel-synth/crates/cli",
  "projects/rigel-synth/crates/plugin",
  "projects/rigel-synth/crates/xtask",
  "projects/rigel-synth/crates/simd",
  "projects/rigel-synth/crates/simd-dispatch",
  "projects/rigel-synth/crates/math",
  "projects/rigel-synth/crates/timing",
  "projects/rigel-synth/crates/modulation",
  "projects/rigel-synth/crates/wavetable-io"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kyle Cierzan <kcierzan@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kcierzan/rigel"
homepage = "https://github.com/kcierzan/rigel"
description = "A vintage-digital emulating music synthesizer"
rust-version = "1.83"

[workspace.dependencies]
# Math (no-std)
libm = "0.2"

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Audio file I/O
hound = "3.5"

# Error handling
anyhow = "1.0"

# Plugin framework
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# Benchmark profile matching release optimizations
[profile.bench]
inherits = "release"

# Development profile with some optimization for audio work
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
