[package]
name = "rigel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for generating test audio with Rigel synthesizer"
rust-version.workspace = true

[[bin]]
name = "rigel"
path = "src/main.rs"

[dependencies]
# Internal dependencies
rigel-dsp = { path = "../dsp" }
wavetable-io = { path = "../wavetable-io" }

# CLI framework
clap.workspace = true

# Audio file I/O
hound.workspace = true

# Error handling
anyhow.workspace = true

[dev-dependencies]
# Testing utilities
tempfile = "3.15"

# Re-use wavetable-io for test fixture creation
wavetable-io = { path = "../wavetable-io" }
