[package]
name = "rigel-dsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "No-std DSP core for Rigel wavetable synthesizer"
rust-version.workspace = true

[lib]
name = "rigel_dsp"
crate-type = ["lib"]

[dependencies]
libm = "0.2"

[dev-dependencies]
# Statistical benchmarking with wall-clock time measurements
criterion = { version = "0.5", features = ["html_reports"] }

# Deterministic instruction-count benchmarking for CI
iai-callgrind = "0.14"

[[bench]]
name = "criterion_benches"
harness = false

[[bench]]
name = "iai_benches"
harness = false
