[package]
name = "rigel-dsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "No-std DSP core for Rigel wavetable synthesizer"
rust-version.workspace = true

[lib]
name = "rigel_dsp"
crate-type = ["lib"]

[dependencies]
libm = "0.2"
cpufeatures = { version = "0.2", optional = true }
rigel-math = { path = "../math", default-features = false }

[features]
default = []
runtime-dispatch = ["cpufeatures", "rigel-math/runtime-dispatch", "rigel-math/scalar", "rigel-math/avx2", "rigel-math/avx512", "avx2", "avx512"]

# SIMD backend compilation flags (enable corresponding rigel-math backends)
avx2 = ["rigel-math/avx2"]
avx512 = ["rigel-math/avx512"]
neon = ["rigel-math/neon"]

# Forced backend selection (deterministic testing)
force-scalar = ["rigel-math/scalar"]
force-avx2 = ["avx2"]
force-avx512 = ["avx512"]
force-neon = ["neon"]

[dev-dependencies]
# Statistical benchmarking with wall-clock time measurements
criterion = { version = "0.5", features = ["html_reports"] }

# Deterministic instruction-count benchmarking for CI
iai-callgrind = "0.14"

[[bench]]
name = "criterion_benches"
harness = false

[[bench]]
name = "iai_benches"
harness = false
