[package]
name = "rigel-dsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "No-std DSP core for Rigel wavetable synthesizer"
rust-version.workspace = true

[lib]
name = "rigel_dsp"
crate-type = ["lib"]

[dependencies]
libm = "0.2"
rigel-simd-dispatch = { path = "../simd-dispatch", default-features = false }
rigel-timing = { path = "../timing" }
rigel-math = { path = "../math/" }
rigel-simd = { path = "../simd/" }
rigel-modulation = { path = "../modulation", default-features = false }

[features]
default = []
runtime-dispatch = ["rigel-simd-dispatch/runtime-dispatch"]

# SIMD backend compilation flags
avx2 = ["rigel-simd-dispatch/avx2"]
avx512 = ["rigel-simd-dispatch/avx512"]
neon = ["rigel-simd-dispatch/neon"]

# Forced backend selection (deterministic testing)
force-scalar = ["rigel-simd-dispatch/force-scalar"]
force-avx2 = ["rigel-simd-dispatch/force-avx2"]
force-avx512 = ["rigel-simd-dispatch/force-avx512"]
force-neon = ["rigel-simd-dispatch/force-neon"]

[dev-dependencies]
# Statistical benchmarking with wall-clock time measurements
criterion = { version = "0.7", features = ["html_reports"] }

# Deterministic instruction-count benchmarking for CI
iai-callgrind = "0.16"

[[bench]]
name = "criterion_benches"
harness = false

[[bench]]
name = "iai_benches"
harness = false
