[package]
name = "rigel-math"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Cierzan <kylecierzan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Trait-based SIMD abstraction library for real-time audio DSP"
repository = "https://github.com/kcierzan/rigel"
homepage = "https://github.com/kcierzan/rigel"
documentation = "https://docs.rs/rigel-math"
readme = "README.md"
keywords = ["audio", "dsp", "simd", "synthesizer", "real-time"]
categories = ["multimedia::audio", "no-std", "algorithms"]

[lib]
name = "rigel_math"
path = "src/lib.rs"

[features]
default = ["scalar"]
scalar = ["rigel-simd/scalar"]
avx2 = ["rigel-simd/avx2"]
avx512 = ["rigel-simd/avx512"]
neon = ["rigel-simd/neon"]
runtime-dispatch = []  # Allow multiple backends to coexist for runtime selection

# Forced backend selection (deterministic testing) - mutually exclusive
force-scalar = ["scalar"]
force-avx2 = ["avx2"]
force-avx512 = ["avx512"]
force-neon = ["neon"]

[dependencies]
rigel-simd = { path = "../simd", default-features = false }
libm = "0.2"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.14"

[[bench]]
name = "criterion_benches"
harness = false

[[bench]]
name = "iai_benches"
harness = false

[package.metadata.docs.rs]
all-features = false
default-features = true
