[package]
name = "rigel-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rigel wavetable synthesizer plugin (VST3/CLAP)"
rust-version.workspace = true

[lib]
name = "rigel_plugin"
crate-type = ["cdylib", "lib"]

[dependencies]
# Internal dependencies
rigel-dsp = { path = "../dsp" }

# Plugin framework
nih_plug.workspace = true
nih_plug_vizia.workspace = true

# GUI dependencies
atomic_float = "0.1"

[features]
default = []

# SIMD backend features (forwarded to rigel-dsp)
avx2 = ["rigel-dsp/avx2"]
avx512 = ["rigel-dsp/avx512"]
neon = ["rigel-dsp/neon"]

# Forced backend selection features (forwarded to rigel-dsp)
force-scalar = ["rigel-dsp/force-scalar"]
force-avx2 = ["rigel-dsp/force-avx2"]
force-avx512 = ["rigel-dsp/force-avx512"]
force-neon = ["rigel-dsp/force-neon"]
